# cccc-lite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cccc-lite.sln  cccc-site.sln  design.md  guess.md  pipeline_lite.ps1  trim_lite.py  woco.sln
cccc/: Activer.cpp  Activer.h  AdditionalCost.cpp  AdditionalCost.h  Brain.cpp  Brain.h  CMakeLists.txt  CudaControl.cpp  CudnnGraph.cpp  CudnnGraph.h  DataPreparer.cpp  DataPreparer.h  DataPreparerFactory.cpp  DataPreparerFactory.h  DataPreparerImage.cpp  DataPreparerImage.h  DataPreparerTxt.cpp  DataPreparerTxt.h  GpuControl.cpp  GpuControl.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MainProcess.cpp  MainProcess.h  Matrix.cpp  Matrix.h  MatrixData.cpp  MatrixData.h  MatrixEx.cpp  MatrixEx.h  MatrixOp.cpp  MatrixOp.h  Net.cpp  Net.h  NetCifa.cpp  NetCifa.h  NetLayer.cpp  NetLayer.h  (+26 more)
cccc-cuda/: CMakeLists.txt  cccc-cuda.vcxproj  cuda_functions.cu  cuda_functions.h
cccc-hip/: CMakeLists.txt  cccc-hip.vcxproj  cccc-hip.vcxproj.filters  hip_functions.cpp  hip_functions.h  hip_functions.hip
cccc-llm/: Tokenizer.cpp  Tokenizer.h  cccc-agent.cpp  cccc-llm.cpp  cccc-llm.h  cccc-llm.vcxproj  cccc-sd.cpp
cccc-mnist/: CMakeLists.txt  Cifar10Reader.cpp  Cifar10Reader.h  DataPreparerMnist.cpp  DataPreparerMnist.h  MnistReader.cpp  MnistReader.h  build.sh  cccc-mnist.vcxproj  cccc-mnist.vcxproj.filters  cccc_extension.h  extension.cpp
cccc-sd/: DiffusionScheduler.h  cccc-sd.cpp  cccc-sd.h  cccc-sd.vcxproj
cccc-windows/: Application.cpp  Application.h  CMakeLists.txt  cccc-windows.vcxproj  cccc-windows.vcxproj.filters  windows.cpp
doc/: AMD_ROCm_使用说明.md  cccc与llama.cpp对比.md  cublas_gemm接口说明.md  doc.md  图像生成任务缺失问题.md  新增算子说明.md  架构说明.md  编译说明.md  网络结构与对照基准.md  网络脚本说明.md  语言任务缺失问题.md  部分注意事项.md  配置文件说明.md
include/: cuda_type_fake.h  hip_runtime_api_part.h  hip_runtime_type_part.h  hip_type_fake.h
scripts/: convert_weights.py
will/: Activer.cpp  Activer.h  AdditionalCost.cpp  AdditionalCost.h  Brain.cpp  Brain.h  CMakeLists.txt  CudaControl.cpp  CudaControl.h  DataPreparer.cpp  DataPreparer.h  DataPreparerFactory.cpp  DataPreparerFactory.h  DataPreparerImage.cpp  DataPreparerImage.h  DataPreparerTxt.cpp  DataPreparerTxt.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Matrix.cpp  Matrix.h  MatrixData.cpp  MatrixData.h  MatrixEx.cpp  MatrixEx.h  MatrixOp.cpp  MatrixOp.h  Net.cpp  Net.h  NetCifa.cpp  NetCifa.h  Neural.cpp  Neural.h  Option.cpp  Option.h  Solver.cpp  Solver.h  Util.cpp  (+15 more)
will-cuda/: CMakeLists.txt  cuda_functions.cu  will-cuda.vcxproj
will-mnist/: CMakeLists.txt  Cifar10Reader.cpp  Cifar10Reader.h  DataPreparerMnist.cpp  DataPreparerMnist.h  MnistReader.cpp  MnistReader.h  extension.cpp  will-mnist.vcxproj  will-mnist.vcxproj.filters
will-windows/: Application.cpp  Application.h  CMakeLists.txt  will-windows.vcxproj  will-windows.vcxproj.filters  windows.cpp
woco/: CMakeLists.txt  CudaControl.cpp  CudaControl.h  DataPreparer.cpp  DataPreparer.h  DataPreparerImage.cpp  DataPreparerImage.h  Factory.cpp  Factory.h  Log.cpp  Log.h  Matrix.cpp  Matrix.h  MatrixExtend.cpp  MatrixExtend.h  MatrixOperator.cpp  MatrixOperator.h  Net.cpp  Net.h  NetCifa.cpp  NetCifa.h  NetLua.cpp  NetLua.h  Neural.cpp  Neural.h  Option.cpp  Option.h  SaveBuffer.cpp  SaveBuffer.h  Solver.cpp  Solver.h  Util.cpp  Util.h  VectorMath.h  blas_types.h  cblas_real.h  cublas_real.cpp  cublas_real.h  cuda_hack.cpp  cuda_half_hack.h  (+4 more)
woco-cuda/: CMakeLists.txt  cuda_functions.cu  cuda_functions.h  woco-cuda.vcxproj  woco_cuda.cu
woco-ext/: CMakeLists.txt  Cifar10Reader.cpp  Cifar10Reader.h  DataPreparerExt.cpp  DataPreparerExt.h  DataPreparerMnist.cpp  DataPreparerMnist.h  MnistReader.cpp  NetMnist.cpp  extension.cpp  woco-ext.vcxproj  woco-ext.vcxproj.filters
woco-mnist/: CMakeLists.txt  DataPreparerMnist.cpp  MnistReader.h  NetMnist.cpp  NetMnist.h  extension.cpp  woco-mnist.vcxproj  woco-mnist.vcxproj.filters  woco_extension.cpp  woco_extension.h
woco-onnx/: NetOnnx.cpp  NetOnnx.h  dllmain.cpp  woco-onnx.vcxproj  woco-onnx.vcxproj.filters
woco-python/: CMakeLists.txt  PreBuild.cmd  woco-python.vcxproj  woco-python.vcxproj.filters  woco.i
woco-test/: CMakeLists.txt  Test.cpp  Test.h  woco-test.vcxproj  woco-test.vcxproj.filters
woco-windows/: Application.cpp  Application.h  CMakeLists.txt  windows.cpp  woco-windows.vcxproj  woco-windows.vcxproj.filters
work/: 1.ini  build.sh  cifar10.ini  cp_bin.bat  mnist-cv.ini  mnist-lenet.ini  mnist.ini  start_jupyter.bat
